# optimization-double-descent

./: README.md  pyproject.toml  requirements.txt
notebooks/: 01_regression_base.ipynb  02_regression_optimizers.ipynb  03_mnist.ipynb  regression.ipynb
optimization_double_descent/data/: synthetic.py
optimization_double_descent/experiments/: regression_double_descent.py
optimization_double_descent/models/: capacity_sweep.py  linear.py  regression.py
optimization_double_descent/objectives/: base.py  lasso.py  least_squares.py  ridge.py
optimization_double_descent/solvers/: base.py  closed_form.py  gradient_descent.py  stochastic_gradient_descent.py
optimization_double_descent/utils/: plotting.py
